devel
-----
* Fixed BTS-233 issue: Fixed invalid IndexId comparator.

* Fixed handling of failedLeaderJob. In case of a plan modification, that
  removes a server from the plan, e.g. reduce replication factor. Directly
  followed by a failure of the current shard leader, would reinsert
  the just removed server in the plan, which is undesired, we first need
  to have a full "desync" cycle on this server to be reusable in the plan
  again.

* Fixed very spurious errors if the `holdReadLockCollection` replication API for
  the getting-in-sync procedure of shards was called during server shutdown.
  In this case that method could ask the transaction manager for a specific
  transaction, but wasn't return one due to the server shutddown. 

* Added new 'aql' type for ArangoSearch analyzers.

* Obsoleted the startup options `--database.throw-collection-not-loaded-error` 
  and `--ttl.only-loaded-collection`.

  These options were meaningful for the MMFiles storage engine only, but for 
  the RocksDB storage engine they did not make any difference. Using these startup
  options is still possible, but will have no effect other than generating a 
  warning at server startup.

* Added CMake option `USE_MINIMAL_DEBUGINFO`.
  This option is turned off by default. If turned on, the created binaries
  will contain only a minimum amount of debug symbols, reducing the size
  of the executables. If turned off (which is the default), the binaries
  will contain full debug information, which will make them bigger in size
  unless the debug information is later stripped again.

* Modified the returned error code for calling the `shards()` function on a
  collection in single-server from "internal error" (error number 4) to "shards
  API is only available in cluster" and error number 9, HTTP status code 501.

* Bug-fix: Allow to unlink a view created on a SmartGraphEdge collection.

* If a collection (or database) is dropped during the instantiation of an AQL query,