@@ -70,7 +70,6 @@ endif ()
 
 option(USE_PRECOMPILED_V8 "use a precompiled V8" OFF)
 
-
 set(V8_VERSION
   "7.9.317"
   CACHE INTERNAL
