@@ -25,6 +25,7 @@
 
 #include <fuerte/asio_ns.h>
 #include <fuerte/loop.h>
+#include "debugging.h"
 
 namespace arangodb { namespace fuerte { inline namespace v1 {
 
@@ -111,7 +112,7 @@ struct Socket<SocketType::Tcp> {
 template <>
 struct Socket<fuerte::SocketType::Ssl> {
   Socket(EventLoopService& loop, asio_ns::io_context& ctx)
-      : resolver(ctx), socket(ctx, loop.sslContext()), timer(ctx) {}
+    : resolver(ctx), socket(ctx, loop.sslContext()), timer(ctx), cleanupDone(false) {}
 
   ~Socket() { this->cancel(); }
 
@@ -151,6 +152,8 @@ struct Socket<fuerte::SocketType::Ssl> {
       resolver.cancel();
       if (socket.lowest_layer().is_open()) {  // non-graceful shutdown
         asio_ns::error_code ec;
+        socket.lowest_layer().shutdown(asio_ns::ip::tcp::socket::shutdown_both, ec);
+        ec.clear();
         socket.lowest_layer().close(ec);
       }
     } catch (...) {
@@ -159,25 +162,41 @@ struct Socket<fuerte::SocketType::Ssl> {
 
   template <typename F>
   void shutdown(F&& cb) {
+    // The callback cb plays two roles here:
+    //   1. As a callback to be called back.
+    //   2. It captures by value a shared_ptr to the connection object of which this
+    //      socket is a member. This means that the allocation of the connection and
+    //      this of the socket is kept until all asynchronous operations are completed
+    //      (or aborted).
     asio_ns::error_code ec;  // prevents exceptions
     socket.lowest_layer().cancel(ec);
+
     if (!socket.lowest_layer().is_open()) {
       timer.cancel(ec);
       std::forward<F>(cb)(ec);
       return;
     }
+    cleanupDone = false;
     timer.expires_from_now(std::chrono::seconds(3));
-    timer.async_wait([this](asio_ns::error_code ec) {
-      if (!ec) {
+    timer.async_wait([cb, this](asio_ns::error_code ec) {
+      // Copy in callback such that the connection object is kept alive long
+      // enough, please do not delete, although it is not used here!
+      if (!cleanupDone && !ec) {
+        socket.lowest_layer().shutdown(asio_ns::ip::tcp::socket::shutdown_both, ec);
+        ec.clear();
         socket.lowest_layer().close(ec);
+        cleanupDone = true;
       }
     });
     socket.async_shutdown([cb(std::forward<F>(cb)), this](auto const& ec) {
       timer.cancel();
 #ifndef _WIN32
-      if (!ec || ec == asio_ns::error::basic_errors::not_connected) {
+      if (!cleanupDone && (!ec || ec == asio_ns::error::basic_errors::not_connected)) {
         asio_ns::error_code ec2;
+        socket.lowest_layer().shutdown(asio_ns::ip::tcp::socket::shutdown_both, ec2);
+        ec2.clear();
         socket.lowest_layer().close(ec2);
+        cleanupDone = true;
       }
 #endif
       cb(ec);
@@ -187,6 +206,7 @@ struct Socket<fuerte::SocketType::Ssl> {
   asio_ns::ip::tcp::resolver resolver;
   asio_ns::ssl::stream<asio_ns::ip::tcp::socket> socket;
   asio_ns::steady_timer timer;
+  std::atomic<bool> cleanupDone;
 };
 
 #ifdef ASIO_HAS_LOCAL_SOCKETS
