@@ -378,6 +378,16 @@ void HeartbeatThread::getNewsFromAgencyForDBServer() {
       }
     }
   }
+
+  // Periodically update the list of DBServers and prune agency comm
+  // connection pool:
+  if (++_DBServerUpdateCounter >= 60) {
+    auto& clusterFeature = server().getFeature<ClusterFeature>();
+    auto& ci = clusterFeature.clusterInfo();
+    ci.loadCurrentDBServers();
+    _DBServerUpdateCounter = 0;
+    clusterFeature.pruneAsyncAgencyConnectionPool();
+  }
 }
 
 DBServerAgencySync& HeartbeatThread::agencySync() { return _agencySync; }
@@ -648,6 +658,8 @@ void HeartbeatThread::getNewsFromAgencyForCoordinator() {
   if (++_DBServerUpdateCounter >= 60) {
     ci.loadCurrentDBServers();
     _DBServerUpdateCounter = 0;
+    auto& clusterFeature = server().getFeature<ClusterFeature>();
+    clusterFeature.pruneAsyncAgencyConnectionPool();
   }
 }
 
@@ -967,6 +979,12 @@ void HeartbeatThread::runSingleServer() {
     } catch (...) {
       LOG_TOPIC("9a79c", ERR, Logger::HEARTBEAT)
           << "got an unknown exception in single server heartbeat";
+    }
+    // Periodically prune the connection pool
+    if (++_DBServerUpdateCounter >= 60) {
+      _DBServerUpdateCounter = 0;
+      auto& clusterFeature = server().getFeature<ClusterFeature>();
+      clusterFeature.pruneAsyncAgencyConnectionPool();
     }
   }
 }
